RepoImpl Tests angepasst, überflüssige Methode gelöscht, Testdatenbank-Scripts angepasst